# PyGellermann

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  packaging.yml  test.yml
gellermann/: __init__.py  gellermann.py  gellermann_gui.py
pygellermann/: __init__.py  gellermann.py  gui.py
res/pyinstaller/: pygellermann-gui.py
scripts/: pygellermann-gui.py
tests/: requirements.txt  test_gellermann.py
