[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pygellermann"
description = "A Python Gellermann series generator"
license = { text = " GPL-3.0-or-later" }
authors = [
    { name = "Yannick Jadoul", email = "Yannick.Jadoul@mpi.nl" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "qtpy",
    "PyQt6",
    "pyqtdarktheme",
]
dynamic = ["version"]

[project.gui-scripts]
pygellermann-gui = "pygellermann.gui:main"

[tool.setuptools_scm]
write_to = "pygellermann/_version.py"

[tool.check-manifest]
ignore = ["pygellermann/_version.py"]

[tool.flake8]
max-line-length = 160
max-doc-length = 100
docstring-convention = "numpy"
per-file-ignores = [
    "pygellermann/gui.py:D101,D102,D103",
    "scripts/*:D100,D103",
    "tests/*:D100,D103",
]

[tool.isort]
multi_line_output = 3
sections = ["FUTURE", "PYTEST", "QT", "LOCALFOLDER", "FIRSTPARTY", "THIRDPARTY", "STDLIB", "TYPING"]
known_first_party = ["pygellermann"]
known_pytest = ["pytest"]
known_qt = ["qtpy"]
known_typing = ["typing", "numpy.typing"]

[tool.mypy]
packages = ["pygellermann"]
plugins = "numpy.typing.mypy_plugin"
strict = true
always_true = "PYQT6"
always_false = ["PYQT5", "PYSIDE2", "PYSIDE6"]

[[tool.mypy.overrides]]
module = "pygellermann.gui"
strict = false
disallow_untyped_calls = false
disallow_untyped_defs = false
check_untyped_defs = true
